--- a/scss/main.css
+++ b/scss/main.css
@@ -21,24 +21,42 @@
   align-items: center;
   margin: 0 50px;
 }
-.header div svg {
+.header div .mail-icon {
+  width: 18px;
+  height: 16px;
+  margin-right: 10px;
+}
+.header div .phone-icon {
+  width: 12px;
+  height: 18px;
   margin-right: 10px;
 }
 .header div p {
-  font-family: "Involve", sans-serif;
   font-size: 14px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 400;
-  line-height: 24px;
+}
+
+.description-text {
+  text-align: center;
+  margin: 126px 0 55px 0;
+}
+.description-text p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  letter-spacing: -0.96px;
+  padding: 0 300px;
+  color: #000000;
 }
 
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 86px;
-  padding: 0 140px;
+  padding: 0 150px;
 }
 .navbar .logo img {
   width: 217px;
@@ -52,19 +70,19 @@
 .navbar .menu p {
   font-size: 16px;
   font-weight: 400;
-  color: #4D4D4D;
+  color: #4d4d4d;
   text-transform: uppercase;
-  margin: 0px 30px;
+  margin: 0px 20px;
   cursor: pointer;
 }
 .navbar .button-order button {
   width: 213px;
   height: 45px;
-  background: #FF602C;
-  border: 1px solid #FF602C;
+  background: #ff602c;
+  border: 1px solid #ff602c;
   border-radius: 50px;
   cursor: pointer;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 16px;
 }
 
@@ -92,27 +110,24 @@
 }
 .description .back .breadcrumbs a {
   font-family: "Cygre", sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 32px;
-  line-height: 24px;
-  color: #B4B4B4;
+  color: #b4b4b4;
   cursor: pointer;
 }
 .description .back .breadcrumbs .check {
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.description .back .description-text {
+.description .back .description {
   text-align: center;
   margin-top: 202px;
   width: 70%;
 }
-.description .back .description-text p {
+.description .back .description p {
   font-family: "Cygre", sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 48px;
-  color: #FFFFFF;
+  color: #ffffff;
   line-height: 57.6px;
   overflow: hidden;
   display: -webkit-box;
@@ -128,50 +143,95 @@
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.table table {
+  border: none;
+  margin: 0 200px;
+  border-collapse: collapse;
+}
+.table table td,
+.table table th {
+  padding: 8px;
+}
+.table table td {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #282c35;
+}
+.table table .tick {
+  text-align: center;
+}
+.table table .tick img {
+  width: 15px;
+  height: 10px;
+}
+.table table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+.table table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+}
+.table table .type-work {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 31px;
+  color: #282c35;
+}
+.table table .general,
+.table table .detailed {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 31px;
+  color: #ff684a;
+  width: 250px;
+  text-align: center;
+}
+.table table .table-cost:nth-child(even) {
+  background-color: #ffffff;
+}
+.table table .table-cost div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.table table .table-cost div p {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 30px;
+  color: #282c35;
+  text-align: center;
+}
+.table table .table-cost div button {
+  width: 143px;
+  height: 45px;
+  border: 1px solid #ff602c;
+  border-radius: 50px;
+  margin-top: 10px;
+  font-weight: 600;
+  font-size: 19px;
+  letter-spacing: -0.28px;
+  text-transform: uppercase;
+  color: #ff602c;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
 .projects {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 120px 335px;
 }
-.projects .heading {
-  font-family: "Involve", sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  letter-spacing: -0.32px;
-  text-transform: uppercase;
-  color: #FF602C;
-}
-.projects .heading:after {
-  content: "-";
-  background: #FF602C;
-  width: 10px;
-  height: 1px;
-  display: inline-block;
-  color: white;
-  vertical-align: middle;
-  margin-left: 11px;
-}
-.projects .heading:before {
-  content: "-";
-  background: #FF602C;
-  width: 10px;
-  height: 1px;
-  display: inline-block;
-  color: white;
-  vertical-align: middle;
-  margin-right: 11px;
-}
 .projects h2 {
   margin-top: 24px;
   margin-bottom: 42px;
-  font-family: "Involve", sans-serif;
   font-weight: 500;
   font-size: 48px;
   line-height: 58px;
   letter-spacing: -0.96px;
-  color: #282C35;
+  color: #282c35;
 }
 .projects .list-objects {
   display: flex;
@@ -191,7 +251,6 @@
 }
 .projects .list-objects h6 {
   margin: 20px 0 10px 0;
-  font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 32px;
@@ -199,7 +258,6 @@
 }
 .projects .list-objects p {
   margin-bottom: 25px;
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -209,14 +267,102 @@
 .projects .list-objects button {
   width: 143px;
   height: 45px;
-  border: 1px solid #FF602C;
+  border: 1px solid #ff602c;
   border-radius: 50px;
-  font-style: normal;
   font-weight: 600;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: -0.28px;
   text-transform: uppercase;
-  color: #FF602C;
-  background-color: #FFFFFF;
+  color: #ff602c;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
+.heading {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.32px;
+  text-transform: uppercase;
+  color: #ff602c;
+}
+.heading:after {
+  content: "-";
+  background: #ff602c;
+  width: 10px;
+  height: 1px;
+  display: inline-block;
+  color: white;
+  vertical-align: middle;
+  margin-left: 11px;
+}
+.heading:before {
+  content: "-";
+  background: #ff602c;
+  width: 10px;
+  height: 1px;
+  display: inline-block;
+  color: white;
+  vertical-align: middle;
+  margin-right: 11px;
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 120px 335px;
+}
+.feedback h2 {
+  margin-top: 24px;
+  margin-bottom: 9px;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 58px;
+  letter-spacing: -0.96px;
+  color: #282c35;
+}
+.feedback .additional-info {
+  margin-bottom: 31px;
+  width: 608px;
+  text-align: center;
+}
+.feedback .additional-info p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 27px;
+  letter-spacing: -0.32px;
+  color: #000000;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.form input {
+  width: 605px;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.3019607843);
+  border-style: none none dashed;
+  border-radius: 20px;
+  margin-bottom: 24px;
+  display: block;
+  background-color: #ffffff;
+  padding: 12px 0 12px 20px;
+  font-size: 16px;
+}
+.form input::-webkit-input-placeholder {
+  opacity: 0.7;
+}
+.form button {
+  height: 45px;
+  background: #ff602c;
+  border-radius: 50px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  border: none;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
