--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,302 +1,425 @@
 @font-face {
-    font-family: 'Involve';
-    src: url('involve.woff2') format('woff2'),
-        url('involve.woff') format('woff');
-
+  font-family: "Involve";
+  src: url("involve.woff2") format("woff2"), url("involve.woff") format("woff");
 }
-
-
-
 
 * {
-    margin: 0;
-    font-family: 'Involve', sans-serif
+  margin: 0;
+  font-family: "Involve", sans-serif;
 }
-
-
 
 .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: #112134;
+  height: 49px;
+
+  div {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    background: #112134;
-    height: 49px;
+    margin: 0 50px;
 
-    div {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin: 0 50px;
-
-        svg {
-            margin-right: 10px;
-        }
-
-        p {
-            font-family: 'Involve', sans-serif;
-            font-size: 14px;
-            color: #FFFFFF;
-            font-weight: 400;
-            line-height: 24px;
-
-        }
+    .mail-icon {
+      width: 18px;
+      height: 16px;
+      margin-right: 10px;
     }
+
+    .phone-icon {
+      width: 12px;
+      height: 18px;
+      margin-right: 10px;
+    }
+
+    p {
+      font-size: 14px;
+      color: #ffffff;
+      font-weight: 400;
+    }
+  }
 }
 
+.description-text {
+  text-align: center;
+  margin: 126px 0 55px 0;
 
+  p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    letter-spacing: -0.96px;
+    padding: 0 300px;
+    color: #000000;
+  }
+}
 
 .navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 86px;
+  padding: 0 150px;
+
+  .logo {
+    img {
+      width: 217px;
+      height: 44px;
+    }
+  }
+
+  .menu {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    height: 86px;
-    padding: 0 140px;
+    justify-content: space-between;
 
-
-    .logo {
-
-        img {
-            width: 217px;
-            height: 44px;
-        }
+    p {
+      font-size: 16px;
+      font-weight: 400;
+      color: #4d4d4d;
+      text-transform: uppercase;
+      margin: 0px 20px;
+      cursor: pointer;
     }
+  }
 
-
-    .menu {
-
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-
-        p {
-            font-size: 16px;
-            font-weight: 400;
-            color: #4D4D4D;
-            text-transform: uppercase;
-            margin: 0px 30px;
-            cursor: pointer;
-
-        }
+  .button-order {
+    button {
+      width: 213px;
+      height: 45px;
+      background: #ff602c;
+      border: 1px solid #ff602c;
+      border-radius: 50px;
+      cursor: pointer;
+      color: #ffffff;
+      font-size: 16px;
     }
-
-    .button-order {
-        button {
-            width: 213px;
-            height: 45px;
-            background: #FF602C;
-            border: 1px solid #FF602C;
-            border-radius: 50px;
-            cursor: pointer;
-            color: #FFFFFF;
-            font-size: 16px;
-        }
-
-
-
-    }
+  }
 }
-
 
 .description {
+  width: 100%;
+  height: 820px;
+  position: relative;
+
+  .back {
     width: 100%;
     height: 820px;
-    position: relative;
-
-    .back {
-        width: 100%;
-        height: 820px;
-        background-color: black;
-        background-image: url("../resource/background.png");
-        background-position: center bottom;
-        background-size: cover;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-
-        div {
-            z-index: 1;
-        }
-
-        .breadcrumbs {
-            margin-top: 98px;
-
-            a {
-                font-family: 'Cygre', sans-serif;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 32px;
-                line-height: 24px;
-                color: #B4B4B4;
-                cursor: pointer;
-            }
-
-            .check {
-                color: #FFFFFF;
-            }
-        }
-
-        .description-text {
-            text-align: center;
-            margin-top: 202px;
-            width: 70%;
-        }
-
-        .description-text p {
-            font-family: 'Cygre', sans-serif;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 48px;
-            color: #FFFFFF;
-
-            line-height: 57.6px;
-
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-
-
-        }
-    }
-
-    .back::before {
-        content: '';
-        position: absolute;
-        z-index: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
-    }
-
-
-
-}
-
-
-
-.projects {
+    background-color: black;
+    background-image: url("../resource/background.png");
+    background-position: center bottom;
+    background-size: cover;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 120px 335px;
 
+    div {
+      z-index: 1;
+    }
 
-    .heading {
-        font-family: 'Involve', sans-serif;
+    .breadcrumbs {
+      margin-top: 98px;
+
+      a {
+        font-family: "Cygre", sans-serif;
         font-weight: 400;
-        font-size: 18px;
-        line-height: 20px;
-        letter-spacing: -0.32px;
-        text-transform: uppercase;
-        color: #FF602C;
+        font-size: 32px;
+        color: #b4b4b4;
+        cursor: pointer;
+      }
 
-
-        &:after {
-            content: "-";
-            background: #FF602C;
-            width: 10px;
-            height: 1px;
-            display: inline-block;
-            color: white;
-            vertical-align: middle;
-            margin-left: 11px;
-
-        }
-
-
-        &:before {
-            content: "-";
-            background: #FF602C;
-            width: 10px;
-            height: 1px;
-            display: inline-block;
-            color: white;
-            vertical-align: middle;
-            margin-right: 11px;
-        }
+      .check {
+        color: #ffffff;
+      }
     }
 
-    h2 {
-        margin-top: 24px;
-        margin-bottom: 42px;
-        font-family: 'Involve', sans-serif;
-        font-weight: 500;
-        font-size: 48px;
-        line-height: 58px;
-        letter-spacing: -0.96px;
-        color: #282C35;
-
+    .description {
+      text-align: center;
+      margin-top: 202px;
+      width: 70%;
     }
 
-    .list-objects {
+    .description p {
+      font-family: "Cygre", sans-serif;
+      font-weight: 400;
+      font-size: 48px;
+      color: #ffffff;
+      line-height: 57.6px;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+    }
+  }
+
+  .back::before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+}
+
+.table {
+  table {
+    border: none;
+    margin: 0 200px;
+    border-collapse: collapse;
+
+    td,
+    th {
+      padding: 8px;
+    }
+
+    td {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 30px;
+      color: #282c35;
+    }
+
+    .tick {
+      text-align: center;
+
+      img {
+        width: 15px;
+        height: 10px;
+      }
+    }
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+
+    th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+    }
+
+    .type-work {
+      font-weight: 600;
+      font-size: 32px;
+      line-height: 31px;
+      color: #282c35;
+    }
+
+    .general,
+    .detailed {
+      font-weight: 600;
+      font-size: 32px;
+      line-height: 31px;
+      color: #ff684a;
+      width: 250px;
+      text-align: center;
+    }
+
+    .table-cost {
+      &:nth-child(even) {
+        background-color: #ffffff;
+      }
+
+      div {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 37px;
-
-        .object {
-            display: flex;
-            justify-content: space-between;
-            flex-direction: column;
-            flex: 1;
-
-        }
-
-        img {
-            width: 290px;
-            height: 215px;
-
-        }
-
-        h6 {
-
-            margin: 20px 0 10px 0;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 32px;
-            color: #000000;
-        }
+        flex-direction: column;
+        align-items: center;
 
         p {
-            margin-bottom: 25px;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 20px;
-            color: #000000;
-            opacity: 0.5;
-
-
+          font-weight: 500;
+          font-size: 22px;
+          line-height: 30px;
+          color: #282c35;
+          text-align: center;
         }
 
         button {
+          width: 143px;
+          height: 45px;
+          border: 1px solid #ff602c;
+          border-radius: 50px;
+          margin-top: 10px;
 
-            width: 143px;
-            height: 45px;
-            border: 1px solid #FF602C;
-            border-radius: 50px;
+          font-weight: 600;
+          font-size: 19px;
+          letter-spacing: -0.28px;
+          text-transform: uppercase;
+          color: #ff602c;
 
-
-            font-style: normal;
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 21px;
-            letter-spacing: -0.28px;
-            text-transform: uppercase;
-            color: #FF602C;
-
-            background-color: #FFFFFF;
-
-
-
+          background-color: #ffffff;
+          cursor: pointer;
         }
+      }
+    }
+  }
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 120px 335px;
+
+  h2 {
+    margin-top: 24px;
+    margin-bottom: 42px;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 58px;
+    letter-spacing: -0.96px;
+    color: #282c35;
+  }
+
+  .list-objects {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 37px;
+
+    .object {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      flex: 1;
     }
 
+    img {
+      width: 290px;
+      height: 215px;
+    }
+
+    h6 {
+      margin: 20px 0 10px 0;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 32px;
+      color: #000000;
+    }
+
+    p {
+      margin-bottom: 25px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: #000000;
+      opacity: 0.5;
+    }
+
+    button {
+      width: 143px;
+      height: 45px;
+      border: 1px solid #ff602c;
+      border-radius: 50px;
+
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 21px;
+      letter-spacing: -0.28px;
+      text-transform: uppercase;
+      color: #ff602c;
+
+      background-color: #ffffff;
+      cursor: pointer;
+    }
+  }
+}
+
+.heading {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.32px;
+  text-transform: uppercase;
+  color: #ff602c;
+
+  &:after {
+    content: "-";
+    background: #ff602c;
+    width: 10px;
+    height: 1px;
+    display: inline-block;
+    color: white;
+    vertical-align: middle;
+    margin-left: 11px;
+  }
+
+  &:before {
+    content: "-";
+    background: #ff602c;
+    width: 10px;
+    height: 1px;
+    display: inline-block;
+    color: white;
+    vertical-align: middle;
+    margin-right: 11px;
+  }
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 120px 335px;
+
+  h2 {
+    margin-top: 24px;
+    margin-bottom: 9px;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 58px;
+    letter-spacing: -0.96px;
+    color: #282c35;
+  }
+
+  .additional-info {
+    margin-bottom: 31px;
+    width: 608px;
+    text-align: center;
+    p {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 27px;
+      letter-spacing: -0.32px;
+      color: #000000;
+    }
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+
+  input {
+    width: 605px;
+    border-bottom: 1px dashed #0000004d;
+    border-style: none none dashed;
+    border-radius: 20px;
+    margin-bottom: 24px;
+
+    display: block;
+    background-color: #ffffff;
+    padding: 12px 0 12px 20px;
+    font-size: 16px;
+
+    &::-webkit-input-placeholder {
+      opacity: 0.7;
+    }
+  }
+
+  button {
+    height: 45px;
+    background: #ff602c;
+    border-radius: 50px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+    border: none;
+    text-transform: uppercase;
+    color: #ffffff;
+    cursor: pointer;
+  }
 }
